Fixed grid collapse issue on iPad (768px)

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -4,7 +4,7 @@ $fonts-path: "../fonts/";
 /* Dimensions */
 $screen-xs: 320px;
 $screen-sm: 480px;
-$screen-md: 768px;
+$screen-md: 767px;
 $screen-lg: 1200px;
 
 /* Retina */
