--- a/src/styles/partials/utils.scss
+++ b/src/styles/partials/utils.scss
@@ -49,6 +49,7 @@
   &__item {
     display: inline-block;
     vertical-align: middle;
+    max-width: 100%;
   }
 
   &.ib__item--vab {
